# ChangeLog for dev-python/sqlalchemy
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/sqlalchemy/ChangeLog,v 1.133 2014/09/15 15:44:33 idella4 Exp $

  15 Sep 2014; Ian Delaney <idella4@gentoo.org> sqlalchemy-0.9.7.ebuild:
  add missed dep pytest

  01 Aug 2014; Raúl Porcel <armin76@gentoo.org> sqlalchemy-0.9.2.ebuild:
  sparc stable wrt #505840

  30 Jul 2014; Ian Delaney <idella4@gentoo.org> +files/0.9.7-test-fix.patch,
  sqlalchemy-0.9.7.ebuild:
  upgrade test deps, test phase

  29 Jul 2014; Jeroen Roovers <jer@gentoo.org> sqlalchemy-0.7.9.ebuild:
  Stable for HPPA (bug #518468).

*sqlalchemy-0.9.7 (29 Jul 2014)

  29 Jul 2014; Ian Delaney <idella4@gentoo.org> +sqlalchemy-0.9.7.ebuild,
  -sqlalchemy-0.7.4.ebuild, -sqlalchemy-0.7.5.ebuild, -sqlalchemy-0.7.6.ebuild,
  -sqlalchemy-0.7.7.ebuild, -sqlalchemy-0.7.8.ebuild:
  bump; clean old python impls, rm some old

  18 Jul 2014; Tobias Klausmann <klausman@gentoo.org> sqlalchemy-0.9.2.ebuild:
  Stable on alpha, bug #505840

*sqlalchemy-0.9.6 (04 Jul 2014)

  04 Jul 2014; Patrick Lauer <patrick@gentoo.org> +sqlalchemy-0.9.6.ebuild:
  Bump

  23 Jun 2014; Pacho Ramos <pacho@gentoo.org> sqlalchemy-0.9.2.ebuild:
  x86 stable, bug #505840

  08 Jun 2014; Akinori Hattori <hattya@gentoo.org> sqlalchemy-0.9.2.ebuild:
  ia64 stable wrt bug #505840

  23 May 2014; Markos Chandras <hwoarang@gentoo.org> sqlalchemy-0.9.2.ebuild:
  Stable on amd64 wrt bug #505840

  11 Apr 2014; Samuel Damashek <sdamashek@gentoo.org> sqlalchemy-0.9.4.ebuild:
  Require sqlite use flag if tests are being run.

*sqlalchemy-0.9.4 (11 Apr 2014)

  11 Apr 2014; Samuel Damashek <sdamashek@gentoo.org> +sqlalchemy-0.9.4.ebuild:
  Version bump to sqlalchemy 0.9.4 and add python 3.4 to PYTHON_COMPAT

  07 Apr 2014; Markus Meier <maekke@gentoo.org> sqlalchemy-0.9.2.ebuild:
  arm stable, bug #505840

  02 Apr 2014; Ian Delaney <idella4@gentoo.org> sqlalchemy-0.9.2.ebuild: