@@ -30,13 +30,13 @@ EBUILD sqlalchemy-0.9.1.ebuild 2223 SHA256 1172eb4136ae09a13e948ea4049403ae86081
 EBUILD sqlalchemy-0.9.2.ebuild 2310 SHA256 8a2f8d7efb416dbafda9d60dd03734b72803289872c9eebc5c7ed068568c9086 SHA512 98782dac7781769b42eca1d90ca0a467108ef268994235dd8afce87eb497ecd72ebd4e7480075ddd9915144afd20c6f234443c2899821a3624e8b6379cddd904 WHIRLPOOL e4432778e4dc63734bbc7c08f2088fb730dbd28a5eeac7025986b2d2aa85e6fa3092c9cb05c43f3803929c75662866c15ba45c65af6635489aaf17bf6a707d23
 EBUILD sqlalchemy-0.9.4.ebuild 2379 SHA256 5a5c8fdce112ff97ef2421671c027bf0af60c0654fe56e065bb978267b601f0e SHA512 eb2473af4665745df8bf2656e4210d0509d5bd5bad077544e18a6a192726a118146d5403546b2c881204ff53798af2142758155952beef8d1dd8d5520cedf54c WHIRLPOOL 075e0651777d712b0916cbc23b9f101626dbbfbbb8d5cbf424682656c52dbe962b5863db10250540eefc273fefdab0d67dff0fa7f5b783e47fa7af67475b80fa
 EBUILD sqlalchemy-0.9.6.ebuild 2377 SHA256 fe6572e39a40afb53a4aa372959b91aea1539104a965e4b02f84b66f5725d693 SHA512 2470988428761638a8cc96a161396c0d59fb27bd64efa76411ca8fd2e41408e1c820e4c47fcafea2f1f4fddd3401031ad4d4df9e072378e673e22cb5858e37e9 WHIRLPOOL d96888f963677310ab49b1d1ed66834e1d90539738150a80950cf4d381d45dbd2d09193a77d01732354c035a004a605d13e0c5789e7bf5db7634875390d2251d
-EBUILD sqlalchemy-0.9.7.ebuild 2581 SHA256 45ccbcf274b2833c4632d20528f120b5364dec1a6bb745ccc1607a32712dee9e SHA512 2c5879d060d4586edaef2da55520c70862fcc99f35f595a1328bbef6ba2d32a76bc42a317a265a6d6d596d29ac445a5bf79264c8d3dcc5ee95de73b201ae3187 WHIRLPOOL 06656720cb816ef953151fcb898c04f797723da9773d51596f63bc8d91344ef4d157cf1c0352a030e845b72489aa7e4b2c91f4b7ce3b08cc1c7f4375b8cdb0a4
-MISC ChangeLog 19597 SHA256 da3a2ad4144c96c70439bd59a6ced00ceb97babf7078111ec64733bacfd2ec72 SHA512 cbda44878936edc4914b860c9e2cce822bdc2c73f131e3696867ac0e20cae41508f8809d5dbc414b52b6414c8a842d2c7ebc6c5360856452906170d9f63e4378 WHIRLPOOL df3e1437da66b05471c9f837744ecb6231e08bb436d3aa6f6ab3fffe48313ed4a5ece13ec8817593000440af18699ea915e9328bda0d6df2bcf1d2d1d9425633
+EBUILD sqlalchemy-0.9.7.ebuild 2475 SHA256 87652be6a0492e0b0c33cc6a9f4668fe7b06c7e49d0ff31ac59ef2cf700d5fff SHA512 a0408a345740c1a492b35e58ee0e57c140de361bed806eb98215f511eca99084acaac47083aef9183afacdf0d6fa1ec137d178c2189c2f67e98d2fe708b14b7f WHIRLPOOL e7b50e25c03a904dab8f0c132d76d69b95d45b5d25ca46496d8c06d8b433621e10bc8771f569afdc759fd73f3b2c7109f8ad9a6d2c508bf7356aa491901d2967
+MISC ChangeLog 19781 SHA256 ed37ace9df35c928c071bf61038c042489274c323c7bfe187c01bccc467bb2d6 SHA512 82c60f06d2e2a6f0f2d0229a0fe569dcc2e76c78a1543fe88071c3e06a198ffc8b6c1df99e9d57634632ba6a44d594255df1607403c05855d32ed576e6594303 WHIRLPOOL 8b611338240674131346fa2ed4d98c1563a4dd94a80184624b4fc6358e01a73872a4128270cd56866c6cfbcb4d2dc10868c041fedfd6347f78d26c7efa067557
 MISC metadata.xml 233 SHA256 77ca0910fec09997d5679f4de22c824a0b0de12d9ac12b253ad544ae7357f720 SHA512 1521eab2401d4b820c053a13680ec44b9bf4931516f4f4c1508ca92b288bf6cae2db36a875ddc5c2475e862c16d3e92cb662c093958950ead4eb72e463abcff6 WHIRLPOOL 9279e4a60e5c11a72f329dcc13bd9c18d3bbfc1fcaab98f46df1336835f407a8471b4a76b61e74a5fa1bb8e24156cd5e3c2e8418752a412479f37b6193b74ec6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlQXBy4ACgkQso7CE7gHKw1Y7gCfVVQCI4ls11zzLtJJ50/zdSBv
-zfEAoNCWYGwFkIGJy6HRx9u/E/fCeKxE
-=dtcN
+iEYEAREIAAYFAlQXEfsACgkQso7CE7gHKw2JBgCgofQbBS4dylmJRsrCCqcB2fyG
+EPwAoKkpLdnp+Bj1BG3Wa0Rd+jnYgBoQ
+=r8Ir
 -----END PGP SIGNATURE-----
