@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/sqlalchemy/sqlalchemy-0.9.7.ebuild,v 1.3 2014/09/15 15:44:33 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/sqlalchemy/sqlalchemy-0.9.7.ebuild,v 1.4 2014/09/15 16:30:34 idella4 Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python{2_7,3_2,3_3,3_4} pypy )
@@ -21,14 +21,11 @@ KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-
 IUSE="doc examples +sqlite test"
 REQUIRED_USE="test? ( sqlite )"
 
-RDEPEND="dev-python/setuptools[${PYTHON_USEDEP}]
-		sqlite? ( >=dev-db/sqlite-3.3.13 )"
+RDEPEND="dev-python/setuptools[${PYTHON_USEDEP}]"
 
 DEPEND="${RDEPEND}
-	test? (	( || ( dev-python/pytest[${PYTHON_USEDEP}] >=dev-python/nose-0.10.4[${PYTHON_USEDEP}] ) )
-		>=dev-db/sqlite-3.3.13
-		dev-python/pytest[${PYTHON_USEDEP}]
-		dev-python/mock[${PYTHON_USEDEP}]
+	test? (	dev-python/pytest[${PYTHON_USEDEP}]
+		$(python_gen_cond_dep 'dev-python/mock[${PYTHON_USEDEP}]' 'python{2_7,3_2}' pypy)
 	)"
 S="${WORKDIR}/${MY_P}"
 
